--- a/sample-api/pom.xml
+++ b/sample-api/pom.xml
@@ -22,6 +22,8 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.source>${java.version}</maven.compiler.source>
 
+        <flyway-core.version>11.0.0</flyway-core.version>
+
         <spring-boot-maven-plugin.version>3.3.5</spring-boot-maven-plugin.version>
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
@@ -220,6 +222,7 @@
                     <dependency>
                         <groupId>org.flywaydb</groupId>
                         <artifactId>flyway-database-postgresql</artifactId>
+                        <version>${flyway-core.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
